# xaod_usage

./: .buildinfo  .gitignore  README.md  genindex.html  intro.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  servicex_query_cache.json
.github/workflows/: rebuild.yaml  web_build.yaml
_sources/: intro.md
_sources/appendix/: calibrations.md  errors.ipynb  old_access.ipynb  py_help.ipynb
_sources/chapters/: calibration.ipynb  caloclusters.ipynb  configuration.ipynb  configuration.md  data.md  ditaus.ipynb  electrons.ipynb  eventinfo.ipynb  jets.ipynb  met.ipynb  muons.ipynb  photons.ipynb  py_help.ipynb  taus.ipynb  tracks.ipynb  trigger.ipynb  truth.ipynb  vertices.ipynb  xaod_objects.ipynb
appendix/: calibrations.html  errors.html  old_access.html  py_help.html
book/: _config.yml  _toc.yml  intro.md  requirements.txt
book/_build/html/: .buildinfo  (+7 more)
book/appendix/: calibrations.md  errors.ipynb  old_access.ipynb  py_help.ipynb
book/chapters/: calibration.ipynb  caloclusters.ipynb  config.py  configuration.md  data.md  electrons.ipynb  eventinfo.ipynb  helpers.py  jets.ipynb  met.ipynb  muons.ipynb  old_access.ipynb  photons.ipynb  py_help.ipynb  taus.ipynb  test.ipynb  tracks.ipynb  trigger.ipynb  truth.ipynb  vertices.ipynb  xaod_objects.ipynb
chapters/: calibration.html  caloclusters.html  configuration.html  data.html  ditaus.html  electrons.html  eventinfo.html  jets.html  met.html  muons.html  old_access.html  photons.html  py_help.html  taus.html  tracks.html  trigger.html  truth.html  vertices.html  xaod_objects.html
(+14 files in other folders)
