[tool.poetry]
name = "xaod_usage"
version = "0.1.0"
description = "Jupyter Book that shows off xAOD ServiceX usage"
authors = ["Gordon Watts <gordon@gordonandpaula.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyter-book = "^0.12.0"
matplotlib = "^3.4.3"
ghp-import = "^2.0.2"
hist = {extras = ["plot"], version = "^2.5.2"}
particle = "^0.16.3"
func-adl-servicex-xaodr21 = "^1.0.21"
func-adl-servicex = {version = ">=2.0b1", extras = ["local"]}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
